<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Введите ссылку на изображение"
        android:inputType="textUri"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonLoadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Загрузить изображение"
        android:layout_below="@id/editTextUrl"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/buttonLoadImage"
        android:layout_marginTop="32dp"/>

</RelativeLayout>
